--- a/nn.Rmd
+++ b/nn.Rmd
@@ -175,7 +175,7 @@ x_test_data= test_data %>% pull(text)
 y_test_data= test_data %>% pull(y)
 ```
 
-Now it is time to load keras and make some adjustments to the data. The data are tweets so a lot of special characters are removed like # and @'s. And then we tokenize our data as we know from basic machine learning to get like a bag of words from our song lyrics and lastly we create a list where every song has a vector which includes the words as a numerical character if the words contained in the tweets are among the 100000 most used words in the data set.
+Now it is time to load keras and make some adjustments to the data. The data are lyrics so not a lot of special characters are used but we still remove them just to be sure. And then we tokenize our data as we know from basic machine learning to get like a bag of words from our song lyrics and lastly we create a list where every song has a vector which includes the words as a numerical character if the words contained in the tweets are among the 100000 most used words in the data set.
 ```{r}
 library(keras)
 
@@ -220,19 +220,17 @@ x_test <- sequences_test %>% vectorize_sequences(dimension = 5000)
 
 str(x_train[1,])
 ```
-What the above has done to the data is, that every tweet now is a row and every feature/word now is a column and then if the tweets has e.g. word 1 then it would have the value 1 otherwise zero. So we basically now have a matrix of size [2488x100000] [number of song in training set x number of words].
+What the above has done to the data is, that every tweet now is a row and every feature/word now is a column and then if the tweets has e.g. word 1 then it would have the value 1 otherwise zero. So we basically now have a matrix of size [2488x5000] [number of song in training set x number of words].
 
-###The model
+### The model
 
-The above data is then used in our baseline model with an input shape of 100000 because that is the size of our input. Then we run it through two dense "relu" layers which is normal procedure for a baseline model. Lastly we have a dense layer with the output which is of unit 1 and is a "sigmoid" layer which means it returns a value between 0 and 1 as we want, as we wanna figure out if a tweet is fake or real.
+The above data is then used in our baseline model with an input shape of 5000 because that is the size of our input. Then we run it through two dense "relu" layers which is normal procedure for a baseline model. Lastly we have a dense layer with the output which is of unit 1 and is a "sigmoid" layer which means it returns a value between 0 and 1 as we want, as we wanna figure out if a song is positive or negative.
 ```{r}
 model_keras <- keras_model_sequential()
 
 model <- model_keras %>%
-  layer_dense(units = 16, activation = "relu", input_shape = c(5000)) %>%
-  layer_dropout(rate = 0.1) %>% 
-  layer_dense(units = 16, activation = "relu") %>%
-  layer_dropout(rate = 0.1) %>% 
+  layer_dense(units = 128, activation = "relu", input_shape = c(5000)) %>% 
+  layer_dense(units = 128, activation = "relu") %>% 
   layer_dense(units = 1, activation = "sigmoid")
 ```
 
@@ -245,7 +243,7 @@ model %>% compile(
 )
 ```
 
-Here the structure of the model can be viewed
+Here the structure of the model can be viewed, where it can be seen that the model has 656769 tunable parameters, so not the biggest of models but not the smallest either.
 ```{r}
 summary(model)
 ```
@@ -260,11 +258,69 @@ history_ann <- model %>% fit(
   validation_split = 0.25
 )
 ```
-
+We then plot the result of the model
 ```{r}
 plot(history_ann)
 ```
-The plot shows a better and better accuracy the more epoch we train the model
+
+The top graph shows the lose of the model, where the blue line is the loss of the validation set, which initially falls a bit but then it rises back up. The lower graph shows the same, that the moment the loss rises in the validation set the accuracy falls again. The training set does a lot better than the validation set, which is a indicator of, that our model is over fitted.
+
+Running our model on our test data also shows a bad result
+```{r}
+metrics = model %>% evaluate(x_test, y_test_data); metrics
+```
+
+We will now try to tune the model to get a better result and prevent the over fitting.
+
+### Model tunning
+
+We introduce some dropout layers and reduce the weights of each layer to minimize the number of parameters in the model to prevent the overfitting we saw above.
+```{r}
+model_keras <- keras_model_sequential()
+
+model2 <- model_keras %>%
+  layer_dense(units = 16, activation = "relu", input_shape = c(5000)) %>% 
+  layer_dropout(rate = 0.1) %>%
+  layer_dense(units = 16, activation = "relu") %>% 
+  layer_dropout(rate = 0.1) %>%
+  layer_dense(units = 1, activation = "sigmoid")
+```
+
+We use baseline model compiling with optimizer "adam", loss "binary" as we are dealing with a binary case and the metric we wanna maximize is accuracy.
+```{r}
+model2 %>% compile(
+  optimizer = "adam",
+  loss = "binary_crossentropy",
+  metrics = "accuracy"
+)
+```
+
+Here the structure of the model can be viewed, where it can be seen that the model has 656769 tunable parameters, so not the biggest of models but not the smallest either.
+```{r}
+summary(model2)
+```
+And now the model is run 10 times with a batch size of 512, so a bigger batch size than the baseline model.
+```{r}
+set.seed(12345)
+history_ann2 <- model2 %>% fit(
+  x_train,
+  y_train_data,
+  epochs = 15,
+  batch_size = 512,
+  validation_split = 0.25
+)
+```
+We then plot the result of the tunned model
+```{r}
+plot(history_ann2)
+```
+The model we have tried to tune seems better as we can see the loss function both of the validation data and the training data continues to go down after every epoch. The accuracy also increases in every period until it stalls out a bit but still this model looks better than the baseline model.
+
+
+```{r}
+metrics2 = model2 %>% evaluate(x_test, y_test_data); metrics2
+```
+The accuracy of this model is better than the baseline model, but with an accuracy of 59% it is still not any good.
 
 
 ## Rnn model with paded data
@@ -289,13 +345,13 @@ Now if the value in e.g. the first column of the first tweet is 0 it means that 
 
 #### The model
 
-setting up the model we will first use a layer_embedding to compress our initial one-hot-encoding vector of length 10.0000 to a “meaning-vector” (=embedding) of the lower dimensionality of 32. Then we add a layer_simple_rnn on top, and finally a layer_dense for the binary prediction of review sentiment.
+setting up the model we will first use a layer_embedding to compress our initial one-hot-encoding vector of length 5000 to a “meaning-vector” (=embedding) of the lower dimensionality of 32. Then we add a layer_simple_rnn on top, and finally a layer_dense for the binary prediction of review sentiment.
 ```{r}
 model_keras2 <- keras_model_sequential()
 
 model_rnn <- model_keras2 %>%
-  layer_embedding(input_dim = 5000, output_dim = 16) %>%
-  layer_simple_rnn(units = 16, activation = "tanh") %>%
+  layer_embedding(input_dim = 5000, output_dim = 32) %>%
+  layer_simple_rnn(units = 32, activation = "tanh") %>%
   layer_dense(units = 1, activation = "sigmoid")
 ```
 
@@ -313,7 +369,7 @@ model_rnn %>% compile(
 )
 ```
 
-
+And run our model
 ```{r}
 set.seed(12345)
 history_rnn <- model_rnn %>% fit(
@@ -328,141 +384,23 @@ history_rnn <- model_rnn %>% fit(
 plot(history_rnn) 
 ```
 
-# Neural Network Afinn
-Now we try with our Afinn labeled data
+Again the traning set outperforms the validation set a lot, which shows our model is overfitted. Further we see that the loss of the validation set starts to climb after a couple of epochs and the accuracy to fall, so not a good model.
 
 ```{r}
-data_afinn_n= data_afinn %>%
-  rename( y = label )
+metrics3 = model_rnn %>% evaluate(x_test, y_test_data); metrics3
 ```
+Running our model on the test data shows an accuracy of 60%, but we will now try to fine tune it to make it better.
 
+#### Tunning the model
 
-We start by creating test and training data 
-
+This time we again try to reduce the number of parameters to prevent over fitting. We also make another rnn layer 
 ```{r}
-library(rsample)
+model_keras2 <- keras_model_sequential()
 
-split2= initial_split(data_afinn_n, prop = 0.75)
-
-train_data2= training(split2)
-test_data2= testing(split2)
-```
-
-
-```{r}
-x_train_data2= train_data2 %>% pull(text)
-y_train_data2= train_data2 %>% pull(y)
-
-x_test_data2= test_data2 %>% pull(text)
-y_test_data2= test_data2 %>% pull(y)
-```
-
-
-Again we tokenize
-```{r}
-library(keras)
-
-#for training data
-tokenizer_train2 <- text_tokenizer(num_words = 100000,
-                                  filters = "!\"#$%&()*+,-./:;<=>?@[\\]^_`{|}~\t\n" ) %>%
-  fit_text_tokenizer(x_train_data2)
-
-sequences_train2 = texts_to_sequences(tokenizer_train2, x_train_data2)
-
-
-#For test data
-
-tokenizer_test2 <- text_tokenizer(num_words = 100000,
-                                 filters = "!\"#$%&()*+,-./:;<=>?@[\\]^_`{|}~\t\n" ) %>%
-  fit_text_tokenizer(x_test_data2)
-
-sequences_test2 = texts_to_sequences(tokenizer_test2, x_test_data2)
-
-```
-
-## Baseline model
-
-### One-hot encoding
-
-One-hot encoding again to get a bag of words
-```{r}
-x_train2 <- sequences_train2 %>% vectorize_sequences(dimension = 100000) 
-x_test2 <- sequences_test2 %>% vectorize_sequences(dimension = 100000) 
-
-str(x_train2[1,])
-```
-
-###The model
-
-The above data is then used in our baseline model with an input shape of 10000 because that is the size of our input. Then we run it through two dense "relu" layers which is normal procedure for a baseline model. Lastly we have a dense layer with the output which is of unit 1 and is a "sigmoid" layer which means it returns a value between 0 and 1 as we want, as we wanna figure out if a tweet is fake or real.
-```{r}
-model_keras3 <- keras_model_sequential()
-
-model2 <- model_keras3 %>%
-  layer_dense(units = 32, activation = "relu", input_shape = c(100000)) %>%
-  layer_dropout(rate = 0.1) %>% 
-  layer_dense(units = 32, activation = "relu") %>%
-  layer_dropout(rate = 0.1) %>% 
-  layer_dense(units = 1, activation = "sigmoid")
-```
-
-We use baseline model compiling with optimizer "adam", loss "binary" as we are dealing with a binary case and the metric we wanna maximize is accurary.
-```{r}
-model2 %>% compile(
-  optimizer = "adam",
-  loss = "binary_crossentropy",
-  metrics = "accuracy"
-)
-```
-
-Here the structure of the model can be viewed
-```{r}
-summary(model2)
-```
-And now the model is run 10 times with a batch size of 512
-```{r}
-history_ann <- model2 %>% fit(
-  x_train2,
-  y_train_data2,
-  epochs = 10,
-  batch_size = 128,
-  validation_split = 0.25
-)
-```
-
-```{r}
-plot(history_ann)
-```
-
-## Rnn model with paded data
-### Padding
-In our first baseline model, we used a document-term matrix as inputs for training, with one-hot-encodings (= dummy variables) for the 10.000 most popular terms. This has a couple of disadvantages. Besides being a very large and sparse vector for every review, as a “bag-of-words”, it did not take the word-order (sequence) into account.
-
-This time, we use a different approach, therefore also need a different input data-structure. We now use pad_sequences() to create a integer tensor of shape (samples, word_indices). However, tweets vary in length, which is a problem since Keras requieres the inputs to have the same shape across the whole sample. Therefore, we use the maxlen = 100 argument, to restrict ourselves to the first 100 words in every tweet also because a tweet maximally can be 280 characters.
-
-The data is paded
-```{r}
-x_train_pad2 <- sequences_train2 %>% pad_sequences(maxlen=1000)
-x_test_pad2 <- sequences_test2 %>% pad_sequences(maxlen=1000)
-
-```
-
-
-```{r}
-glimpse(x_train_pad2)
-```
-Now if the value in e.g. the first column of the first tweet is 0 it means that the first  word in the first tweet is not one of the 10000 most used words and there for our model has no integer for it. If there is an integer e.g. "386" it means that that the 386 most commonly used word is the first word in the tweet.
-
-
-#### The model
-
-setting up the model we will first use a layer_embedding to compress our initial one-hot-encoding vector of length 10.000 to a “meaning-vector” (=embedding) of the lower dimensionality of 32. Then we add a layer_simple_rnn on top, and finally a layer_dense for the binary prediction of review sentiment.
-```{r}
-model_keras4 <- keras_model_sequential()
-
-model_rnn2 <- model_keras4 %>%
-  layer_embedding(input_dim = 100000, output_dim = 32) %>%
-  layer_simple_rnn(units = 32, activation = "tanh") %>%
+model_rnn2 <- model_keras2 %>%
+  layer_embedding(input_dim = 5000, output_dim = 16) %>%
+  layer_simple_rnn(units = 16, return_sequences = TRUE, activation = "tanh" ) %>%
+  layer_simple_rnn(units = 16, return_sequences = FALSE, activation = "tanh") %>%
   layer_dense(units = 1, activation = "sigmoid")
 ```
 
@@ -480,16 +418,53 @@ model_rnn2 %>% compile(
 )
 ```
 
-
+And run our model
 ```{r}
+set.seed(12345)
 history_rnn2 <- model_rnn2 %>% fit(
-  x_train_pad2, y_train_data2,
+  x_train_pad, y_train_data,
   epochs = 10,
-  batch_size = 128,
+  batch_size = 256,
   validation_split = 0.25
 )
 ```
 
+
 ```{r, warning=FALSE}
 plot(history_rnn2) 
+```
+
+Again the traning set outperforms the validation set a lot, which shows our model is overfitted. Further we see that the loss of the validation set starts to climb after a couple of epochs and the accuracy to fall, so not a good model.
+
+```{r}
+metrics3 = model_rnn %>% evaluate(x_test, y_test_data); metrics3
+```
+Running our model on the test data shows an accuracy of 60%, but we will now try to fine tune it to make it better.
+
+
+## LTSM
+
+```{r}
+#model <- keras_model_sequential() %>%
+  #layer_embedding(input_dim = 10000, output_dim = 32) %>%
+  #layer_lstm(units = 32) %>%
+  #layer_dense(units = 1, activation = "sigmoid")
+```
+
+```{r}
+#model %>% compile(
+  #optimizer = "rmsprop",
+  #loss = "binary_crossentropy",
+  #metrics = c("acc")
+#)
+```
+
+```{r}
+#history <- model %>% fit(
+  #one_hot_train, y_train_data,
+  #epochs = 3,
+  #batch_size = 62,
+  #validation_split = 0.2
+#)
+
 ```
